# private_start_page

./: Dockerfile  README.md  node.sh  sample.env
api_server/: .gitignore  Cargo.toml
api_server/.cache/: bookmarks.json
api_server/src/: error.rs  main.rs  state.rs
api_server/src/routes/: bookmarks.rs  gists.rs  mod.rs
docs/: app_building.md  container_building.md
front/: index.html  package.json  vite.config.ts
front/src/: App.vue  types.ts
front/src/composables/: useLocalCache.ts
